--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "next": "^14.2.6",
     "next-i18next": "^15.4.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^13.5.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "18.15.0",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-datepicker": "^4.15.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
